# oteapi-asmod-plugin

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/: pull_request_template.md
docs/: all_strategies.md  index.md
docs/api_reference/: utils.md
docs/api_reference/strategies/: download.md  filter.md  function.md  mapping.md  parse.md  resource.md  transformation.md
examples/: execute-dehydrogenation.ipynb
examples/.ipynb_checkpoints/: execute-dehydrogenation-checkpoint.ipynb
oteapi_asmod/: __init__.py  utils.py
oteapi_asmod/strategies/: filter.py  function.py  parse.py  parse_aseAtoms.py
tests/: conftest.py  test_function.py  test_parse.py
