[options.entry_points]
oteapi.download_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.download
oteapi.filter_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.filter
oteapi.mapping_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.mapping
oteapi.resource_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.resource
oteapi.transformation_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.transformation
oteapi.parse_strategy =
  oteapi_asmod.demo = oteapi_asmod.strategies.parse
