[options.entry_points]
#oteapi.download =
#  oteapi_asmod.fileDEMO = oteapi_asmod.strategies.download:DemoFileStrategy
#oteapi.filter =
#  oteapi_asmod.filter/DEMO = oteapi_asmod.strategies.filter:DemoFilter
#oteapi.mapping =
#  oteapi_asmod.mapping/DEMO = oteapi_asmod.strategies.mapping:DemoMappingStrategy
oteapi.parse =
  oteapi_asmod.chemical/x-xyz = oteapi_asmod.strategies.parse:AtomisticStructureParseStrategy
#oteapi.resource =
#  oteapi_asmod.DEMO-access-service = oteapi_asmod.strategies.resource:DemoResourceStrategy
#oteapi.transformation =
#  oteapi_asmod.script/DEMO = oteapi_asmod.strategies.transformation:DummyTransformationStrategy
oteapi.function=
  oteapi_asmod.asedlite/atoms = oetapi_asmod.strategies.function:ASEDliteFunctionStrategy
